Add test project

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ demo/demo.xcodeproj/project.xcworkspace/xcshareddata
 demo/demo.xcodeproj/project.xcworkspace/xcuserdata
 demo/demo.xcodeproj/xcshareddata
 demo/demo.xcodeproj/xcuserdata
+tests/tests.xcodeproj/project.xcworkspace/xcshareddata
+tests/tests.xcodeproj/project.xcworkspace/xcuserdata
+tests/tests.xcodeproj/xcshareddata
+tests/tests.xcodeproj/xcuserdata
