Add Makefile for tests

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ tests/tests.xcodeproj/project.xcworkspace/xcshareddata
 tests/tests.xcodeproj/project.xcworkspace/xcuserdata
 tests/tests.xcodeproj/xcshareddata
 tests/tests.xcodeproj/xcuserdata
+tests/tests
+*.o
+*.d
+*.gcda
+*.gcno
