Treat warnings as errors

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,5 +1,5 @@
 DEBUG=0
-CXXFLAGS=-std=c++17 -Wall -Wextra -Wshadow -Wconversion -Wpedantic -I../include
+CXXFLAGS=-std=c++17 -Wall -Wextra -Wshadow -Wconversion -Wpedantic -Werror -I../include
 LDFLAGS=-framework Foundation -framework Metal
 SOURCES=main.cpp foundation.cpp metal.cpp objc.cpp
 BASE_NAMES=$(basename $(SOURCES))
