--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,7 +1,7 @@
 DEBUG=0
 CXXFLAGS=-std=c++17 -Wall -Wextra -Wshadow -Wconversion -Wpedantic -Werror -I../include
 LDFLAGS=-framework Cocoa -framework Metal
-SOURCES=main.cpp foundation.cpp metal.cpp objc.cpp quartzcore.cpp
+SOURCES=main.cpp appkit.hpp foundation.cpp metal.cpp objc.cpp quartzcore.cpp
 BASE_NAMES=$(basename $(SOURCES))
 OBJECTS=$(BASE_NAMES:=.o)
 DEPENDENCIES=$(OBJECTS:.o=.d)
